updated some files

--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>AirBnb Clone</title>
@@ -11,7 +11,9 @@
     <header>
     </header>
     <footer>
-      <p>Best School</p>
+      <p>
+        Holberton School
+      </p>
     </footer>
   </body>
 </html>
