--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AirBnb Clone</title>
+    <title>AirBnB Clone</title>
   </head>
-  <body style="margin:0;padding:0 ">
-    <header style="background-color: #FF0000;  width:100%; height:70px;">
+  <body style="margin:0;padding:0">
+    <header style="width: 100%; background-color: #FF0000; height: 70px">
     </header>
-
-    <footer style="background-color: #00FF00; height:60px; width:100%; position:absolute; bottom:0">
-      <p style="text-align:center">Best School</p>
+    <footer style="position: fixed; bottom: 0; width: 100%; background-color: #00FF00; height: 60px">
+      <p style="text-align: center; margin: 20px">
+        Holberton School
+      </p>
     </footer>
   </body>
 </html>
