--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <style media="screen">
-      body {margin:0; padding:0;}
-      header {background-color:#FF0000; height:70px; width:100%;}
-      footer {background-color:#00FF00; height:60px; width:100%;position:absolute; bottom:0;}
-      footer p {text-align:center;}
+    <title>AirBnb Clone</title>
+    <style>
+      body {margin: 0; padding: 0;}
+      header {width: 100%; background-color: #FF0000; height: 70px;}
+      footer {position: fixed; bottom: 0; width: 100%; background-color: #00FF00; height: 60px;}
+      footer p {text-align: center; margin: 20px;}
     </style>
-    <title>AirBnB Clone</title>
   </head>
   <body>
-    <header> </header>
+    <header>
+    </header>
     <footer>
-      <p>Best School</p>
+      <p>
+        Holberton School
+      </p>
     </footer>
   </body>
 </html>
