--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>AirBnB clone</title>
-    <link rel="icon" type="image/x-icon" href="images/icon.png">
+    <title>AirBnb Clone</title>
     <link rel="stylesheet" href="styles/3-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
-    </head>
-    <body>
+    <link rel="icon" href="images/icon.png" type="image/png">
+  </head>
+  <body>
     <header>
-      </header>
+      <div class="logo">
+      </div>
+    </header>
     <footer>
-      <p>Best School</p>
+      <p>
+        Holberton School
+      </p>
     </footer>
-    </body>
+  </body>
 </html>
