--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" type="image/x-icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/4-filters.css">
-    <title>AirBnB clone</title>
+    <link rel="icon" href="images/icon.png" type="image/png">
+    <title>AirBnb Clone</title>
   </head>
   <body>
     <header>
+      <div class="logo">
+      </div>
     </header>
     <div class="container">
       <section class="filters">
-        <button type="button" name="button">Search</button>
+        <button>
+          Search
+        </button>
       </section>
     </div>
     <footer>
-      <p>Best School</p>
+      <p>
+        Holberton School
+      </p>
     </footer>
   </body>
 </html>
