--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,52 +1,60 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" type="image/x-icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
-    <title>AirBnB clone</title>
+    <link rel="icon" href="images/icon.png" type="image/png">
+    <title>AirBnb Clone</title>
   </head>
   <body>
     <header>
+      <div class="logo">
+      </div>
     </header>
     <div class="container">
       <section class="filters">
         <div class="locations">
           <h3>States</h3>
-          <h4>Gondar, Bahir Dar...</h4>
+          <h4>California, New York...</h4>
           <ul class="popover">
-            <li><h2>Bahir Dar:</h2>
+            <li>
+              <h2>California:</h2>
               <ul>
-                <li>Page</li>
-                <li>Page2</li>
-                </ul>
-            </li>
-            <li><h2>Gondar:</h2>
-              <ul>
-                <li>Fasil Castle</li>
-                <li>Simien Mountain</li>
+                <li>San Francisco</li>
+                <li>Mountain View</li>
               </ul>
             </li>
-            </ul>
+            <li>
+              <h2>New York:</h2>
+              <ul>
+                <li>Manhattan</li>
+                <li>Brooklyn</li>
+              </ul>
+            </li>
+          </ul>
         </div>
         <div class="amenities">
           <h3>Amenities</h3>
-          <h4>Internet, Kitchen...</h4>
+          <h4>Laundry, Internet...</h4>
           <ul class="popover">
+            <li>Laundry</li>
             <li>Internet</li>
-            <li>Tv</li>
-            <li>Kitchen</li>
-            <li>Iron</li>
+            <li>Television</li>
+            <li>Pool</li>
           </ul>
         </div>
-        <button type="button" name="button">Search</button>
+        <button>
+          Search
+        </button>
       </section>
     </div>
     <footer>
-      <p>Best School</p>
+      <p>
+        Holberton School
+      </p>
     </footer>
   </body>
 </html>
