--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,104 +1,142 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="zxx">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="stylesheet" href="styles/8-places.css">
-    <title>AirBnB clone</title>
+    <link rel="icon" href="images/icon.png" type="image/png">
+    <title>AirBnb Clone</title>
   </head>
   <body>
     <header>
+      <div class="logo">
+      </div>
     </header>
     <div class="container">
       <section class="filters">
-        <div class="locations">
-          <h3>States</h3>
-          <h4>Gondar, Bahir Dar...</h4>
-          <ul class="popover">
-            <li><h2>Bahir Dar:</h2>
-              <ul>
-                <li>Page</li>
-                <li>Page2</li>
-              </ul>
-            </li>
-            <li><h2>Gondar:</h2>
-              <ul>
-                <li>Fasil Castle</li>
-                <li>Simien Mountain</li>
-              </ul>
-            </li>
-            </ul>
-        </div>
-        <div class="amenities">
-          <h3>Amenities</h3>
-          <h4>Internet, Kitchen...</h4>
-          <ul class="popover">
-            <li>Internet</li>
-            <li>Tv</li>
-            <li>Kitchen</li>
-            <li>Iron</li>
-          </ul>
-        </div>
-        <button type="button" name="button">Search</button>
-      </section> 
+	<div class="locations">
+	  <h3>States</h3>
+	  <h4>California, New York...</h4>
+	  <ul class="popover">
+	    <li>
+	      <h2>California:</h2>
+	      <ul>
+		<li>San Francisco</li>
+		<li>Mountain View</li>
+	      </ul>
+	    </li>
+	    <li>
+	      <h2>New York:</h2>
+	      <ul>
+		<li>Manhattan</li>
+		<li>Brooklyn</li>
+	      </ul>
+	    </li>
+	  </ul>
+	</div>
+	<div class="amenities">
+	  <h3>Amenities</h3>
+	  <h4>Laundry, Internet...</h4>
+	  <ul class="popover">
+            <li>Laundry</li>
+	    <li>Internet</li>
+	    <li>Television</li>
+	    <li>Pool</li>
+	  </ul>
+	</div>
+	<button>
+	  Search
+	</button>
+      </section>
       <section class="places">
-        <h1>Places</h1>
-        <article>
-          <div class="article_places_header">
-            <h2>My home</h2>
-            <div class="price_by_night">$80</div>
-          </div>
-          <div class="information">
-            <div class="max_guest">2 Guests</div>
-            <div class="number_rooms">1 Bedroom</div>
-            <div class="number_bathrooms">1 Bathroom</div>
-          </div>
-          <div class="user">
-            <p><b>Owner:</b> John Lennon</p>
-          </div>
-          <div class="description">
-            <p>This is a lovely 1 bathroom apartament that can accommodate 2 people. It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
-          </div>
-        </article>
-        <article>
-          <h2>Tiny house</h2>
-          <div class="price_by_night">$65</div>
-          <div class="information">
-            <div class="max_guest">4 Guests</div>
-            <div class="number_rooms">2 Bedrooms</div>
-            <div class="number_bathrooms">1 Bathroom</div>
-          </div>
-          <div class="user">
-            <p><b>Owner:</b> Addrienne</p>
-          </div>
-          <div class="description">
-            <p>Our place is a privete, afffordable satan-alone guest house centrally located just minutes to French Quarters, downtown th Fair Grounds (Jazz Fest) and City Park. The guest house is a quaint, 400 suare ft. with a full bath, mini kitchen, & livin room. The extra high cellings make the home feel more spacious. The sofa converts to bed also. We have a hand made counter area that adds character to the room and a great porch/deck to relax on and have a glass of Merlot.</p>
-          </div>
-        </article>
-        <article>
-          <h2>A suite</h2>
-          <div class="price_by_night">$190</div>
-          <div class="information">
-            <div class="max_guest">6 Guests</div>
-            <div class="number_rooms">3 Bedroom</div>
-            <div class="number_bathrooms">2 Bathroom</div>
-          </div>
-          <div class="user">
-            <p><b>Owner:</b> Mick Jagger</p>
-          </div>
-          <div class="description">
-            <p>First loft built by Holbies. It contains a decked terrace, jacuzzi, firepit, rabbits garden, two rooms, two balconies, entrance gate, private garden, private parking, BBQ area, AC in each bedroom, technological equipment, luxury beds, and mountain views. Ideal for architecture lovers, romantic dates, or having a good time. It is a unique space of his kind. Only pets that do not harm rabbits are allowed.</p>
-          </div>
-        </article>
-        </section> 
+	<h1>Places</h1>
+	<article>
+	  <h2>My home</h2>
+	  <div class="price_by_night">
+	    <p>$80</p>
+	  </div>
+	  <div class="information">
+	    <div class="max_guest">
+	      <div class="guest_image"></div>
+	      <p>2 Guests</p>
+	    </div>
+	    <div class="number_rooms">
+	      <div class="bed_image"></div>
+	      <p>1 Bedroom</p>
+	    </div>
+	    <div class="number_bathrooms">
+	      <div class="bath_image"></div>
+	      <p>1 Bathroom</p>
+	    </div>
+	  </div>
+	  <div class="user">
+	    <p><b>Owner: </b>Jon Snow</p>
+	  </div>
+	  <div class="description">
+	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	  </div>
+	</article>
+	<article>
+	  <h2>Tiny house</h2>
+	  <div class="price_by_night">
+	    <p>$65</p>
+	  </div>
+	  <div class="information">
+	    <div class="max_guest">
+	      <div class="guest_image"></div>
+	      <p>4 Guests</p>
+	    </div>
+	    <div class="number_rooms">
+	      <div class="bed_image"></div>
+	      <p>2 Bedroom</p>
+	    </div>
+	    <div class="number_bathrooms">
+	      <div class="bath_image"></div>
+	      <p>1 Bathroom</p>
+	    </div>
+	  </div>
+	  <div class="user">
+	    <p><b>Owner: </b>Daenerys Targaryen</p>
+	  </div>
+	  <div class="description">
+	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	  </div>
+	</article>
+	<article>
+	  <h2>A suite</h2>
+	  <div class="price_by_night">
+	    <p>$190</p>
+	  </div>
+	  <div class="information">
+	    <div class="max_guest">
+	      <div class="guest_image"></div>
+	      <p>6 Guests</p>
+	    </div>
+	    <div class="number_rooms">
+	      <div class="bed_image"></div>
+	      <p>3 Bedroom</p>
+	    </div>
+	    <div class="number_bathrooms">
+	      <div class="bath_image"></div>
+	      <p>2 Bathroom</p>
+	    </div>
+	  </div>
+	  <div class="user">
+	    <p><b>Owner: </b>Azor Ahai</p>
+	  </div>
+	  <div class="description">
+	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	  </div>
+	</article>
+      </section>
     </div>
     <footer>
-      <p>Best School</p>
+      <p>
+	Holberton School
+      </p>
     </footer>
   </body>
 </html>
